--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "openai": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.13.0"
   }
 }
