--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "openai": "^3.1.0"
+    "chatgpt": "^4.2.0",
+    "dotenv-safe": "^8.2.0",
+    "openai": "^3.1.0",
+    "ora": "^6.1.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/dotenv-safe": "^8.1.2",
     "@types/node": "^18.13.0"
   }
 }
