--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "keyv": "^4.5.2",
     "openai": "^3.1.0",
     "ora": "^6.1.2",
+    "redis": "^4.6.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
