--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
       "request": "launch",
       "name": "Debug Tool Script",
       // Change this to your program file
-      "program": "${workspaceFolder}/src/summarize.ts"
+      "program": "${workspaceFolder}/src/summarize.ts",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "outFiles": ["${workspaceFolder}/out/**/*.js"]
     }
   ]
 }
