--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@keyv/redis": "^2.5.5",
+    "@types/pdfjs-dist": "^2.10.378",
     "chatgpt": "^4.2.0",
     "dotenv-safe": "^8.2.0",
     "keyv": "^4.5.2",
