--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/pdfjs-dist": "^2.10.378",
     "chatgpt": "^4.2.0",
     "dotenv-safe": "^8.2.0",
+    "gpt-3-encoder": "^1.1.4",
     "keyv": "^4.5.2",
     "openai": "^3.1.0",
     "ora": "^6.1.2",
