--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@keyv/redis": "^2.5.5",
     "@types/pdfjs-dist": "^2.10.378",
-    "azure-openai": "^0.0.15",
+    "axios": "^1.3.4",
+    "azure-openai": "^0.9.3",
     "chatgpt": "^4.2.0",
     "dotenv-safe": "^8.2.0",
     "gpt-3-encoder": "^1.1.4",
